# nd608-generative-ai-project-2

./: README.md  project.ipynb  pyproject.toml
